feat: added auth unit tests, admin features for genes handling, admin unit tests, confirmation request via header, and some dev QOL
